<resources>
    <string name="app_name">Programmation Non Bloquante</string>
    <string name="preExecute">onPreExecute : before task</string>
    <string name="inBackground">doInBackground</string>
    <string name="postExecute">onProgressUpdate : after task</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="tage">Étage :</string>
    <string name="floor_count">0</string>
</resources>
