<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:text="@string/_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_one" />

    <Button
        android:id="@+id/bt_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_four" />

    <Button
        android:id="@+id/bt_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/_2"
        app:layout_constraintStart_toEndOf="@+id/bt_one"
        app:layout_constraintTop_toBottomOf="@+id/bt_five" />

    <Button
        android:id="@+id/bt_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/_3"
        app:layout_constraintStart_toEndOf="@+id/bt_two"
        app:layout_constraintTop_toBottomOf="@+id/bt_six" />

    <Button
        android:id="@+id/bt_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:text="@string/_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_seven" />

    <Button
        android:id="@+id/bt_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/_5"
        app:layout_constraintStart_toEndOf="@+id/bt_four"
        app:layout_constraintTop_toBottomOf="@+id/bt_eight" />

    <Button
        android:id="@+id/bt_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/_6"
        app:layout_constraintStart_toEndOf="@+id/bt_five"
        app:layout_constraintTop_toBottomOf="@+id/bt_nine" />

    <Button
        android:id="@+id/bt_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/_8"
        app:layout_constraintStart_toEndOf="@+id/bt_seven"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/_9"
        app:layout_constraintStart_toEndOf="@+id/bt_eight"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_floor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:text="@string/tage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_zero" />

    <TextView
        android:id="@+id/floor_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/floor_count"
        app:layout_constraintStart_toEndOf="@+id/tv_floor"
        app:layout_constraintTop_toBottomOf="@+id/bt_zero" />

</android.support.constraint.ConstraintLayout>